--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-search-autocomplete": "^8.5.2",
+    "react-swipeable": "^7.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
