--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "fuscart-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "cra-template-typescript": "1.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
-    "typescript": "^5.7.2"
+    "react-search-autocomplete": "^8.5.2",
+    "react-swipeable": "^7.0.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
