--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "cra-template-typescript": "1.2.0",
@@ -10,6 +13,7 @@
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
     "typescript": "^5.7.2"
   },
   "scripts": {
@@ -39,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
-},
-"homepage": "https://Dhamodharan-PTF.github.io/Fusicart-Test"
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://Dhamodharan-PTF.github.io/Fusicart-Test"
 }
