--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "cra-template-typescript": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
+    "redux": "^5.0.1",
     "typescript": "^5.7.2"
   },
   "scripts": {
@@ -43,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.34",
     "gh-pages": "^6.3.0"
   },
   "homepage": "https://Dhamodharan-PTF.github.io/Fusicart-Test"
