--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,8 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.34",
-    "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://Dhamodharan-PTF.github.io/Fusicart-Test"
+    "@types/react-redux": "^7.1.34"
+  }
 }
